Upgrade plugin to Official UE5.0.0 release

--- a/SparseVolumetrics.uplugin
+++ b/SparseVolumetrics.uplugin
@@ -13,7 +13,11 @@
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": true,
-	"Installed": false,
+	"Installed": true,
+	"EnabledByDefault": true,
+	"SupportedTargetPlatforms": [
+		"Win64"
+	],
 	"Modules": [
 		{
 			"Name": "VolumeImporter",
@@ -33,8 +37,7 @@
 		{
 			"Name": "VolumeRuntime",
 			"Type": "Runtime",
-			"LoadingPhase": "PostConfigInit",
-			"WhitelistPlatforms": [ "Win64" ]
+			"LoadingPhase": "PostConfigInit"
 		}
 	],
 	"Plugins": [
